// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReactor should query 1`] = `
[
  <div>
    <span>
      false
    </span>
  </div>,
  <div>
    <button
      onClick={[Function]}
    >
      Switch
    </button>
  </div>,
  <div>
    <span>
      true
    </span>
  </div>,
]
`;

exports[`createReactor should query 2`] = `
[
  <div>
    <span>
      true
    </span>
  </div>,
  <div>
    <button
      onClick={[Function]}
    >
      Switch
    </button>
  </div>,
  <div>
    <span>
      true
    </span>
  </div>,
]
`;
